<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:fitsSystemWindows="true"
    tools:context="com.example.dinkargakkhar.loginsignup.RegisterActivity">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >
            <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:layout_width="@dimen/width"
                android:layout_height="wrap_content"
                android:text="@string/id"
                android:id="@+id/tvTextCentennialId"
                android:singleLine="false"
                android:layout_alignParentRight="true"/>

            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="number"
                android:ems="10"
                android:id="@+id/edCentenniald"
                android:layout_weight="1"
                android:layout_alignParentLeft="true"/>
        </LinearLayout>
        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:layout_width="@dimen/width"
                android:layout_height="wrap_content"
                android:text="@string/fName"
                android:id="@+id/tvTextFName"
                android:singleLine="false"
                android:layout_alignParentRight="true"/>

            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="textPersonName"
                android:ems="10"
                android:id="@+id/edFName"
                android:layout_weight="0.67"
                android:layout_alignParentLeft="true"/>
        </LinearLayout>
        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:layout_width="@dimen/width"
                android:layout_height="wrap_content"
                android:text="@string/lName"
                android:id="@+id/tvTextLName"
                android:singleLine="false" />

            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="textPersonName"
                android:ems="10"
                android:id="@+id/edLName"
                android:layout_weight="1" />
        </LinearLayout>
        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
         <TextView
                android:layout_width="@dimen/width"
                android:layout_height="wrap_content"
                android:text="@string/email"
                android:id="@+id/tvTextEmail"
                android:singleLine="false" />

            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress"
                android:ems="10"
                android:id="@+id/edEmail"
                android:layout_weight="1" />
        </LinearLayout>
        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">


            <TextView
                android:layout_width="@dimen/width"
                android:layout_height="wrap_content"
                android:text="@string/DOB"
                android:id="@+id/tvDOB"
                android:singleLine="false" />

            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:ems="10"
                android:id="@+id/edDOB"
                android:layout_weight="1" />
        </LinearLayout>
        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">


            <TextView
                android:layout_width="@dimen/width"
                android:layout_height="wrap_content"
                 android:text="@string/hobby"
                android:id="@+id/tvTextHobby"
                android:singleLine="false" />

            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="textPersonName"
                android:ems="10"
                android:id="@+id/edTextHobby"
                android:layout_weight="1" />
        </LinearLayout>
        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">


            <TextView
                android:layout_width="@dimen/width"
                android:layout_height="wrap_content"
                android:text="@string/password"
                android:id="@+id/tvTextPassword"
                android:singleLine="false" />

            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:ems="10"
                android:id="@+id/edTextPassword"
                android:layout_weight="1" />
        </LinearLayout>
        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">


            <TextView
                android:layout_width="@dimen/width"
                android:layout_height="wrap_content"
                android:text="@string/cPassword"
                android:id="@+id/tvTextCPassword"
                android:singleLine="false" />

            <EditText
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:ems="10"
                android:id="@+id/edTextCPassword"
                android:layout_weight="1" />
        </LinearLayout>
        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">


            <TextView
                android:layout_width="@dimen/width"
                android:layout_height="wrap_content"
                android:text="@string/program"
                android:id="@+id/tvTextProgram"
                android:singleLine="false" />

            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="10"
                android:id="@+id/edProgram"
                android:layout_weight="1"
                />
        </LinearLayout>
        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
         <TextView
                android:layout_width="@dimen/width"
                android:layout_height="wrap_content"
                android:text="@string/department"
                android:id="@+id/tvTextDepartment"
                android:singleLine="false" />

            <Spinner
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="10"
                android:id="@+id/spinDepartment"
                android:layout_weight="1"
                android:entries="@array/Department"/>
        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">


            <TextView
                android:layout_width="@dimen/width"
                android:layout_height="wrap_content"
                android:text="@string/campus"
                android:id="@+id/tvTextCampus"
                android:singleLine="false" />

            <Spinner
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="10"
                android:id="@+id/spinCampus"

                android:layout_weight="1"
                android:entries="@array/Campus"/>
        </LinearLayout>
        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <RadioGroup
                android:id="@+id/rgProfession"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                >

                <RadioButton
                    android:id="@+id/radio_student"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/student"
                    android:checked="true" />

                <RadioButton
                    android:id="@+id/radio_faculty"
                    android:layout_width="wrap_content"
                    android:layout_marginLeft="@dimen/width"
                    android:layout_height="wrap_content"

                    android:text="@string/faculty"/>
            </RadioGroup>

        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_gravity="center_vertical"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
          <Button
                android:id="@+id/btn_signup"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
              android:layout_marginBottom="24dp"

                android:text="@string/signup"/>
    </LinearLayout>
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView android:id="@+id/link_login"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="24dp"
            android:text="@string/loginLink"
            android:gravity="center"
            android:textSize="@dimen/activity_horizontal_margin"/>
    </LinearLayout>
    </LinearLayout>

</ScrollView>
